ZJPR-14: Fix responsive design layout bugs

--- a/sass/sl-components/_main-menu-desktop.scss
+++ b/sass/sl-components/_main-menu-desktop.scss
@@ -6,14 +6,6 @@
 ** 
 */
 
-// Hide responsive menu
-@include breakpoint($desktop)
-{
-    .responsive-menus
-    {
-        // display: none;
-    }
-}
 
 // Style nice menus
 
@@ -58,31 +50,6 @@ ul.nice-menu li
             color: white !important;
         }
     }
-    // background-color: white;
-    // padding-top: 8px;
-    // padding-bottom: 12px;
-    // @include breakpoint($range769-961) {
-    //     padding-bottom: 14px;
-    // }
-    // @include breakpoint($range769-876) {
-    //     padding-top: 12px;
-    //     padding-right: 0.75rem;
-
-    // }
-
-    // @include breakpoint($desktop)
-    // {
-    //     padding-right: 8px;
-    //     padding-right: .5rem;
-    //     padding-left: 8px;
-    //     padding-left: .5rem;
-    // }
-    // @include breakpoint($range769-876) {
-    //     padding-right: 4px;
-    //     padding-right: .25rem;
-    //     padding-left: 4px;
-    //     padding-left: .25rem;
-    // }
 
     a
     {
@@ -92,17 +59,6 @@ ul.nice-menu li
         @include link-colors($normal: $black, $hover: white!important);
         @extend %base-font-weight;
         text-transform: uppercase;
-        // @include single-text-shadow;
-        // padding: 0;
-        // padding-right: 0 !important;
-        // @include breakpoint($range769-961) {
-        //     font-size: 16px;
-        //     font-size: 1rem;
-        // }
-        // @include breakpoint($range769-876) {
-        //     font-size: 14px;
-        //     font-size: 0.875rem;
-        // }
     }
     &.active-trail {
         background-color: $box;
