--- a/sass/sl-components/_projekte-landing-page.scss
+++ b/sass/sl-components/_projekte-landing-page.scss
@@ -33,13 +33,30 @@ ul.isotope-filters {
 }
 
 .isotope-element {
-    width: 270px;
+    width: 280px; // 0 - 480px
     height: 270px;
     background: transparent;
     border: 1px solid $box;
     @include border-radius(4px);
     img {
+        width: 280px;
+    }
+    @include breakpoint($range481-568) {
+        width: 254px;
+        height: 260px;
+    }
+    @include breakpoint($range569-667) {
+        width: 302px;
+    img {
+        width: 302px;
+    }
+    }
+    @include breakpoint($desktop) {
         width: 270px;
+        height: 270px;
+        img {
+            width: 270px;
+        }
     }
     @include breakpoint($range1024-1024) {
         width: 314px;
