--- a/sass/sl-components/_team.scss
+++ b/sass/sl-components/_team.scss
@@ -16,7 +16,7 @@
                 margin-right: 2%;
             }
         }
-        @include breakpoint($max568) {
+        @include breakpoint($max567) {
             width: 100%;
         }
     }
@@ -59,22 +59,6 @@
 // two columns
 .node-team.view-mode-full
 {
-    @include breakpoint($max568)
-    {
-        .group-left
-        {
-            float: left;
-
-            width: 37%;
-        }
-        .group-right
-        {
-            float: right;
-
-            width: 60%;
-            margin-left: 3%;
-        }
-    } // end breakpoint $iphone5
     @include breakpoint($tablet) // 2 columns on iPad and desktop
     {
         .group-left
@@ -82,13 +66,14 @@
             float: left;
 
             width: 37%;
+            margin-right: 3%;
         }
         .group-right
         {
-            float: right;
+            // float: right;
+            float: left;
 
-            width: 60%;
-            margin-left: 3%;
+            // width: 60%;
         }
         .field-name-body p
         {
